--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sneas/rx-game#readme",
   "devDependencies": {
     "@types/node": "^10.1.4",
+    "@types/lodash-es": "4.17.0",
     "awesome-typescript-loader": "^5.0.0",
     "source-map-loader": "^0.2.3",
     "tslint": "^5.10.0",
@@ -30,6 +31,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "lodash-es": "4.17.10",
     "rxjs": "^6.2.0"
   }
 }
